# chatbot

./: db.sqlite3-shm  db.sqlite3-wal  manage.py  pyproject.toml
chatbot/: settings.py  urls.py
chatbot/templates/: index.html
members/: urls.py  views.py
members/chat/: context.py  db.sqlite3  db.sqlite3-shm  db.sqlite3-wal
members/templates/: index.html
