[tool.poetry]
name = "chatbot"
version = "0.1.0"
description = ""
authors = ["DStarRaj <samrat00725100@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
django = "^4.1.4"
chatterbot = "1.0.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
